update| font-family,button-hover and title

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <link rel="icon" href="assets/logo.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="assets/logo.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css">
-    <title>成績查詢</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+JP&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>學習狀況查詢</title>
 </head>
 <body>
+    <div class="title">學習狀況查詢</div>
     <div class="container">
         <div class="label">輸入名字</div>
         <div class="box">
